# qwen-terminal

./: .gitignore  CMakeLists.txt  README.md  build.sh  download-model.sh  main.cpp
llama/src/: CMakeLists.txt
